Fixed side scroll on mobile

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 
 .head sub {
   position: relative;
-  left: 5%;
   font-size: 1.4rem;
   color: #ec5242;
   font-family: "Lato", sans-serif;
@@ -27,7 +26,6 @@
 
 .head h1 {
   position: relative;
-  left: 5%;
   font-family: "Lilita One", sans-serif;
   font-size: 2.6rem;
   font-weight: 900;
@@ -43,7 +41,6 @@
   color: #727272;
   font-weight: bold;
   position: relative;
-  left: 10%;
   max-width: 85vw;
   line-height: 1.4rem;
 }
@@ -51,14 +48,12 @@
 .head .date-location {
   position: relative;
   top: 4rem;
-  left: 10%;
 }
 
 .head .date {
   font-family: "Circular-Loom", sans-serif;
   font-weight: 900;
   font-size: 2.5rem;
-  left: 10%;
   color: #727272;
 }
 
@@ -205,7 +200,7 @@
   display: table;
   height: auto;
   overflow: auto;
-  width: 80%;
+  width: 90%;
   left: 5%;
 }
 
@@ -338,6 +333,9 @@
 .speakers-info {
   position: relative;
   left: 50%;
+  /* right: 0%; */
+  width: 185px;
+  font-size: 10px;
 }
 .speaker-name {
   font-family: "Lato", sans-serif;
@@ -362,10 +360,8 @@
 .speaker-desc {
   font-family: "Lato", sans-serif;
   font-size: 1rem;
-  line-height: 1.4;
   position: relative;
   left: 0;
-  width: 50%;
   text-align: left;
   top: 12rem;
 }
@@ -453,10 +449,9 @@
   }
 
   footer {
-    flex-direction: column;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    text-align: center;
-    margin-top: auto;
   }
 
   .footer-right {
@@ -492,6 +487,7 @@
   .headline-container {
     position: absolute;
     top: 13%;
+    padding-left: 15px;
   }
 
   .head h1 {
@@ -525,7 +521,7 @@
     background-image: url("./images/pattern_bg.png");
     background-repeat: repeat;
     top: 55%;
-    width: 100vw;
+    width: 100%;
     height: auto;
     padding-bottom: 200px;
   }
@@ -669,6 +665,5 @@ footer {
   margin-left: 10px;
   position: relative;
   width: 206px;
-  top: -2.4rem;
   text-align: left;
 }
